ADD: Chamando tela de detalhes do livro + dataparser from api e gerando listview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <!-- Books Activity -->
     <string name="books_title">Books</string>
+
+    <!-- Book Details Activity -->
+    <string name="book_details_title_label">Title</string>
+    <string name="book_details_description_label">Description</string>
 </resources>
