--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,12 @@
 
     <!-- Books Activity -->
     <string name="books_title">Books</string>
+    <string name="books_error_401">Não Autorizado</string>
+    <string name="books_error_400">Não tratado</string>
+    <string name="books_error_500">Catastrófico</string>
 
     <!-- Book Details Activity -->
     <string name="book_details_title_label">Title</string>
     <string name="book_details_description_label">Description</string>
+
 </resources>
